mobile fix for body overflow

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+html, body {
 	background: black;
 	width:100vw;
 	height: 100vh;
